--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.5
+  google_fonts: 3.0.1
   flutter: 
     sdk: flutter
 
@@ -16,6 +17,8 @@ dev_dependencies:
   flutter_test: 
     sdk: flutter
 
-flutter: 
+flutter:
+  assets: 
+      - assets/images/
   uses-material-design: true
 
