--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.5
   google_fonts: 3.0.1
+  simple_gradient_text: 1.2.3
   flutter: 
     sdk: flutter
 
@@ -17,9 +18,9 @@ dev_dependencies:
   flutter_test: 
     sdk: flutter
 
-flutter:
+flutter: 
   assets: 
-      - assets/images/
-      - assets/icons/
+    - assets/images/
+    - assets/icons/
   uses-material-design: true
 
