--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   get: 4.6.5
   google_fonts: 3.0.1
+  matrix_gesture_detector: ^0.1.0
   simple_gradient_text: 1.2.3
   url_launcher: ^6.1.5
 
