--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_svg: ^1.1.5
   get: 4.6.5
   google_fonts: 3.0.1
   matrix_gesture_detector: ^0.1.0
