--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   matrix_gesture_detector: ^0.1.0
   simple_gradient_text: 1.2.3
   url_launcher: ^6.1.5
+  lottie: 1.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -26,4 +27,5 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/exercise/
+    - assets/lottie/
   uses-material-design: true
