--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
     sdk: flutter
   flutter_svg: ^1.1.5
   get: 4.6.5
-  google_fonts: 3.0.1
-  matrix_gesture_detector: ^0.1.0
+  google_fonts: ^5.1.0
+  # matrix_gesture_detector: ^0.1.0
   simple_gradient_text: 1.2.3
   url_launcher: ^6.1.5
   lottie: 1.3.0
