--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   simple_gradient_text: 1.2.3
   url_launcher: ^6.1.5
   lottie: 1.3.0
+  web: 0.5.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
